// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms Follow with followers 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <h3
        id="myModalLabel"
      >
        Follow a user
      </h3>
      <form
        className="form-group"
        onSubmit={[Function]}
      >
        <div
          className="col-xs-8"
        >
          <input
            className="form-control"
            id="followHandle"
            onChange={[Function]}
            placeholder="@handle"
            type="text"
            value=""
          />
        </div>
        <div
          className="col-xs-2"
        >
          <button
            className="btn btn-primary"
            id="submitFollow"
            type="submit"
          >
            follow
          </button>
        </div>
      </form>
    </div>
    <div
      className="row"
    >
      <h3>
        Following these people
      </h3>
      <ul
        id="following"
      >
        <li
          className="following-handle"
        >
          <span
            className="handle"
          >
            @philt3r
          </span>
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </li>
        <li
          className="following-handle"
        >
          <span
            className="handle"
          >
            Test 2
          </span>
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms Follow with no followers 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <h3
        id="myModalLabel"
      >
        Follow a user
      </h3>
      <form
        className="form-group"
        onSubmit={[Function]}
      >
        <div
          className="col-xs-8"
        >
          <input
            className="form-control"
            id="followHandle"
            onChange={[Function]}
            placeholder="@handle"
            type="text"
            value=""
          />
        </div>
        <div
          className="col-xs-2"
        >
          <button
            className="btn btn-primary"
            id="submitFollow"
            type="submit"
          >
            follow
          </button>
        </div>
      </form>
    </div>
    <div
      className="row"
    >
      <h3>
        Following these people
      </h3>
      <ul
        id="following"
      />
    </div>
  </div>
</div>
`;
